@@ -6,9 +6,11 @@ import com.example.backend.dto.request.VariantBulkPriceUpdateRequestDto;
 import com.example.backend.dto.request.VariantUpdateRequestDto;
 import com.example.backend.dto.response.PageResponseDto;
 import com.example.backend.dto.response.ProductResponseDto;
+import com.example.backend.dto.response.ProductVariantDetailResponseDto;
 import com.example.backend.exception.ErrorCode;
 import com.example.backend.exception.InvalidException;
 import com.example.backend.mapper.ProductMapper;
+import com.example.backend.mapper.ProductVariantMapper;
 import com.example.backend.model.Category;
 import com.example.backend.model.InventoryTransaction;
 import com.example.backend.model.Product;
@@ -25,6 +27,9 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.security.core.context.SecurityContextHolder;
+import jakarta.persistence.criteria.Join;
+import jakarta.persistence.criteria.Predicate;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.StringUtils;
@@ -51,16 +56,51 @@ public class ProductService {
     private final InventoryTransactionRepository inventoryTransactionRepository;
     private final UserRepository userRepository;
     private final ProductMapper productMapper;
+    private final ProductVariantMapper variantMapper;
 
-    public PageResponseDto<ProductResponseDto> getAllProducts(String keyword, Pageable pageable) {
-        Page<Product> productPage;
-        if (StringUtils.hasText(keyword)) {
-            productPage = productRepository.search(keyword, pageable);
-        } else {
-            productPage = productRepository.findAll(pageable);
-        }
-        Page<ProductResponseDto> dtoPage = productPage.map(productMapper::toResponse);
-        return PageResponseDto.from(dtoPage);
+    public PageResponseDto<ProductResponseDto> getAllProducts(String keyword, Status status, Pageable pageable) {
+        Specification<Product> spec = (root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            predicates.add(criteriaBuilder.notEqual(root.get("status"), Status.DELETED));
+            if (StringUtils.hasText(keyword)) {
+                String keywordLower = "%" + keyword.toLowerCase() + "%";
+                Predicate codePredicate = criteriaBuilder.like(criteriaBuilder.lower(root.get("code")), keywordLower);
+                Predicate namePredicate = criteriaBuilder.like(criteriaBuilder.lower(root.get("name")), keywordLower);
+                predicates.add(criteriaBuilder.or(codePredicate, namePredicate));
+            }
+            if (status != null) {
+                predicates.add(criteriaBuilder.equal(root.get("status"), status));
+            }
+            return criteriaBuilder.and(predicates.toArray(new Predicate[0]));
+        };
+        Page<Product> productPage = productRepository.findAll(spec, pageable);
+        return PageResponseDto.from(productPage.map(productMapper::toResponse));
+    }
+
+    public PageResponseDto<ProductVariantDetailResponseDto> getAllVariants(String keyword, Status status,
+            Pageable pageable) {
+        Specification<ProductVariant> spec = (root, query, criteriaBuilder) -> {
+            List<Predicate> predicates = new ArrayList<>();
+            predicates.add(criteriaBuilder.notEqual(root.get("status"), Status.DELETED));
+
+            if (StringUtils.hasText(keyword)) {
+                String keywordLower = "%" + keyword.toLowerCase() + "%";
+                Join<ProductVariant, Product> product = root.join("product");
+                Predicate skuPredicate = criteriaBuilder.like(criteriaBuilder.lower(root.get("sku")), keywordLower);
+                Predicate productNamePredicate = criteriaBuilder.like(criteriaBuilder.lower(product.get("name")),
+                        keywordLower);
+                predicates.add(criteriaBuilder.or(skuPredicate, productNamePredicate));
+            }
+
+            if (status != null) {
+                predicates.add(criteriaBuilder.equal(root.get("status"), status));
+            }
+
+            return criteriaBuilder.and(predicates.toArray(new Predicate[0]));
+        };
+
+        Page<ProductVariant> variantPage = variantRepository.findAll(spec, pageable);
+        return PageResponseDto.from(variantPage.map(variantMapper::toDetailResponse));
     }
 
     @Transactional
@@ -70,14 +110,13 @@ public class ProductService {
             category = categoryRepository.findById(request.getCategoryId())
                     .orElseThrow(() -> new InvalidException(ErrorCode.CATEGORY_NOT_FOUND));
         }
-
         Product product = productMapper.toEntity(request);
         product.setCategory(category);
         product.setStatus(Status.ACTIVE);
         product.setCode(generateUniqueProductCode());
-
         List<ProductVariant> variants = request.getVariants().stream().map(variantDto -> {
-            String sku = generateSku(product.getCode(), variantDto.getOption1Value(), variantDto.getOption2Value(), variantDto.getOption3Value());
+            String sku = generateSku(product.getCode(), variantDto.getOption1Value(), variantDto.getOption2Value(),
+                    variantDto.getOption3Value());
             return ProductVariant.builder()
                     .product(product)
                     .sku(sku)
@@ -90,9 +129,7 @@ public class ProductService {
                     .status(Status.ACTIVE)
                     .build();
         }).toList();
-
         product.setVariants(variants);
-
         Product savedProduct = productRepository.save(product);
         return productMapper.toResponse(savedProduct);
     }
@@ -101,11 +138,9 @@ public class ProductService {
     public ProductResponseDto updateProduct(Long id, ProductUpdateRequestDto request) {
         Product product = productRepository.findById(id)
                 .orElseThrow(() -> new InvalidException(ErrorCode.PRODUCT_NOT_FOUND));
-
         updateProductFields(product, request);
         handleVariantUpdates(product, request.getVariants());
         syncParentStatus(product);
-
         return productMapper.toResponse(product);
     }
 
@@ -115,14 +150,21 @@ public class ProductService {
                     .orElseThrow(() -> new InvalidException(ErrorCode.CATEGORY_NOT_FOUND));
             product.setCategory(category);
         }
-        if (request.getName() != null) product.setName(request.getName());
-        if (request.getBrand() != null) product.setBrand(request.getBrand());
-        if (request.getUnit() != null) product.setUnit(request.getUnit());
-        if (request.getDescription() != null) product.setDescription(request.getDescription());
-        if (request.getOption1Name() != null) product.setOption1Name(request.getOption1Name());
-        if (request.getOption2Name() != null) product.setOption2Name(request.getOption2Name());
-        if (request.getOption3Name() != null) product.setOption3Name(request.getOption3Name());
-        if (request.getStatus() != null) {
+        if (request.getName() != null)
+            product.setName(request.getName());
+        if (request.getBrand() != null)
+            product.setBrand(request.getBrand());
+        if (request.getUnit() != null)
+            product.setUnit(request.getUnit());
+        if (request.getDescription() != null)
+            product.setDescription(request.getDescription());
+        if (request.getOption1Name() != null)
+            product.setOption1Name(request.getOption1Name());
+        if (request.getOption2Name() != null)
+            product.setOption2Name(request.getOption2Name());
+        if (request.getOption3Name() != null)
+            product.setOption3Name(request.getOption3Name());
+        if (request.getStatus() != null && request.getStatus() != product.getStatus()) {
             product.setStatus(request.getStatus());
             product.getVariants().forEach(v -> v.setStatus(request.getStatus()));
         }
@@ -131,30 +173,25 @@ public class ProductService {
     private void handleVariantUpdates(Product product, List<ProductUpdateRequestDto.VariantUpdateItem> variantItems) {
         Map<Long, ProductVariant> existingVariantsMap = product.getVariants().stream()
                 .collect(Collectors.toMap(ProductVariant::getId, Function.identity()));
-
         Set<Long> requestVariantIds = variantItems.stream()
                 .map(ProductUpdateRequestDto.VariantUpdateItem::getId)
                 .filter(Objects::nonNull)
                 .collect(Collectors.toSet());
-
-        deleteRemovedVariants(product, existingVariantsMap, requestVariantIds);
+        deleteRemovedVariants(existingVariantsMap, requestVariantIds);
         createOrUpdateVariants(product, variantItems, existingVariantsMap);
     }
 
-    private void deleteRemovedVariants(Product product, Map<Long, ProductVariant> existingVariantsMap, Set<Long> requestVariantIds) {
+    private void deleteRemovedVariants(Map<Long, ProductVariant> existingVariantsMap, Set<Long> requestVariantIds) {
         List<ProductVariant> variantsToDelete = existingVariantsMap.values().stream()
                 .filter(variant -> !requestVariantIds.contains(variant.getId()))
                 .toList();
-
         for (ProductVariant variant : variantsToDelete) {
-            if (purchaseOrderDetailRepository.existsByVariantId(variant.getId())) {
-                throw new InvalidException(ErrorCode.CANNOT_DELETE_VARIANT_HAS_TRANSACTIONS);
-            }
-            product.getVariants().remove(variant);
+            variant.setStatus(Status.DELETED);
         }
     }
 
-    private void createOrUpdateVariants(Product product, List<ProductUpdateRequestDto.VariantUpdateItem> variantItems, Map<Long, ProductVariant> existingVariantsMap) {
+    private void createOrUpdateVariants(Product product, List<ProductUpdateRequestDto.VariantUpdateItem> variantItems,
+            Map<Long, ProductVariant> existingVariantsMap) {
         for (ProductUpdateRequestDto.VariantUpdateItem item : variantItems) {
             if (item.getId() == null) {
                 createNewVariant(product, item);
@@ -165,7 +202,8 @@ public class ProductService {
     }
 
     private void createNewVariant(Product product, ProductUpdateRequestDto.VariantUpdateItem item) {
-        String sku = generateSku(product.getCode(), item.getOption1Value(), item.getOption2Value(), item.getOption3Value());
+        String sku = generateSku(product.getCode(), item.getOption1Value(), item.getOption2Value(),
+                item.getOption3Value());
         ProductVariant newVariant = ProductVariant.builder()
                 .product(product)
                 .sku(sku)
@@ -180,37 +218,43 @@ public class ProductService {
         product.getVariants().add(newVariant);
     }
 
-    private void updateExistingVariant(Product product, ProductUpdateRequestDto.VariantUpdateItem item, ProductVariant existingVariant) {
+    private void updateExistingVariant(Product product, ProductUpdateRequestDto.VariantUpdateItem item,
+            ProductVariant existingVariant) {
         if (existingVariant == null) {
             throw new InvalidException(ErrorCode.VARIANT_NOT_FOUND);
         }
-
         boolean hasTransactions = purchaseOrderDetailRepository.existsByVariantId(existingVariant.getId());
-
         if (hasTransactions) {
             boolean optionsChanged = !Objects.equals(item.getOption1Value(), existingVariant.getOption1Value()) ||
-                                     !Objects.equals(item.getOption2Value(), existingVariant.getOption2Value()) ||
-                                     !Objects.equals(item.getOption3Value(), existingVariant.getOption3Value());
+                    !Objects.equals(item.getOption2Value(), existingVariant.getOption2Value()) ||
+                    !Objects.equals(item.getOption3Value(), existingVariant.getOption3Value());
             if (optionsChanged) {
                 throw new InvalidException(ErrorCode.CANNOT_UPDATE_VARIANT_HAS_TRANSACTIONS);
             }
-            if (item.getPurchasePrice() != null) existingVariant.setPurchasePrice(item.getPurchasePrice());
-            if (item.getSalePrice() != null) existingVariant.setSalePrice(item.getSalePrice());
-            if (item.getStatus() != null) existingVariant.setStatus(item.getStatus());
+            if (item.getPurchasePrice() != null)
+                existingVariant.setPurchasePrice(item.getPurchasePrice());
+            if (item.getSalePrice() != null)
+                existingVariant.setSalePrice(item.getSalePrice());
+            if (item.getStatus() != null)
+                existingVariant.setStatus(item.getStatus());
         } else {
             updateVariantFreely(product, item, existingVariant);
         }
     }
 
-    private void updateVariantFreely(Product product, ProductUpdateRequestDto.VariantUpdateItem item, ProductVariant existingVariant) {
+    private void updateVariantFreely(Product product, ProductUpdateRequestDto.VariantUpdateItem item,
+            ProductVariant existingVariant) {
         existingVariant.setOption1Value(item.getOption1Value());
         existingVariant.setOption2Value(item.getOption2Value());
         existingVariant.setOption3Value(item.getOption3Value());
-        if (item.getPurchasePrice() != null) existingVariant.setPurchasePrice(item.getPurchasePrice());
-        if (item.getSalePrice() != null) existingVariant.setSalePrice(item.getSalePrice());
-        if (item.getStatus() != null) existingVariant.setStatus(item.getStatus());
-
-        String newSku = generateSku(product.getCode(), item.getOption1Value(), item.getOption2Value(), item.getOption3Value());
+        if (item.getPurchasePrice() != null)
+            existingVariant.setPurchasePrice(item.getPurchasePrice());
+        if (item.getSalePrice() != null)
+            existingVariant.setSalePrice(item.getSalePrice());
+        if (item.getStatus() != null)
+            existingVariant.setStatus(item.getStatus());
+        String newSku = generateSku(product.getCode(), item.getOption1Value(), item.getOption2Value(),
+                item.getOption3Value());
         if (!newSku.equals(existingVariant.getSku())) {
             if (variantRepository.existsBySku(newSku)) {
                 throw new InvalidException(ErrorCode.SKU_ALREADY_EXISTS);
@@ -225,15 +269,18 @@ public class ProductService {
                 .orElseThrow(() -> new InvalidException(ErrorCode.VARIANT_NOT_FOUND));
 
         // Cập nhật các trường cơ bản
-        if (request.getPurchasePrice() != null) variant.setPurchasePrice(request.getPurchasePrice());
-        if (request.getSalePrice() != null) variant.setSalePrice(request.getSalePrice());
-        if (request.getStatus() != null) variant.setStatus(request.getStatus());
+        if (request.getPurchasePrice() != null)
+            variant.setPurchasePrice(request.getPurchasePrice());
+        if (request.getSalePrice() != null)
+            variant.setSalePrice(request.getSalePrice());
+        if (request.getStatus() != null)
+            variant.setStatus(request.getStatus());
 
         boolean hasTransactions = purchaseOrderDetailRepository.existsByVariantId(variantId);
         if (hasTransactions) {
             boolean optionsChanged = !Objects.equals(request.getOption1Value(), variant.getOption1Value()) ||
-                                     !Objects.equals(request.getOption2Value(), variant.getOption2Value()) ||
-                                     !Objects.equals(request.getOption3Value(), variant.getOption3Value());
+                    !Objects.equals(request.getOption2Value(), variant.getOption2Value()) ||
+                    !Objects.equals(request.getOption3Value(), variant.getOption3Value());
             if (optionsChanged) {
                 throw new InvalidException(ErrorCode.CANNOT_UPDATE_VARIANT_HAS_TRANSACTIONS);
             }
@@ -295,14 +342,8 @@ public class ProductService {
     public void deleteProduct(Long id) {
         Product product = productRepository.findById(id)
                 .orElseThrow(() -> new InvalidException(ErrorCode.PRODUCT_NOT_FOUND));
-
-        boolean hasTransactions = product.getVariants().stream()
-                .anyMatch(variant -> purchaseOrderDetailRepository.existsByVariantId(variant.getId()));
-
-        if (hasTransactions) {
-            throw new InvalidException(ErrorCode.CANNOT_DELETE_PRODUCT_HAS_TRANSACTIONS);
-        }
-        productRepository.delete(product);
+        product.setStatus(Status.DELETED);
+        product.getVariants().forEach(variant -> variant.setStatus(Status.DELETED));
     }
 
     @Transactional
@@ -310,23 +351,22 @@ public class ProductService {
         if (variantIds == null || variantIds.isEmpty()) {
             return;
         }
-        for (Long variantId : variantIds) {
-            if (purchaseOrderDetailRepository.existsByVariantId(variantId)) {
-                throw new InvalidException(ErrorCode.CANNOT_DELETE_VARIANT_HAS_TRANSACTIONS);
-            }
+        List<ProductVariant> variants = variantRepository.findAllById(variantIds);
+        if (variants.size() != variantIds.size()) {
+            throw new InvalidException(ErrorCode.VARIANT_NOT_FOUND);
         }
-        variantRepository.deleteAllByIdInBatch(variantIds);
+        Set<Product> affectedProducts = new HashSet<>();
+        for (ProductVariant variant : variants) {
+            variant.setStatus(Status.DELETED);
+            affectedProducts.add(variant.getProduct());
+        }
+        affectedProducts.forEach(this::syncParentStatus);
     }
 
     @Transactional
     public List<ProductResponseDto> bulkUpdateVariantPrices(VariantBulkPriceUpdateRequestDto request) {
         if (request.getPurchasePrice() == null && request.getSalePrice() == null && request.getStatus() == null) {
             return List.of();
-        }
-        for (Long variantId : request.getVariantIds()) {
-            if (purchaseOrderDetailRepository.existsByVariantId(variantId)) {
-                throw new InvalidException(ErrorCode.CANNOT_UPDATE_VARIANT_HAS_TRANSACTIONS);
-            }
         }
         List<ProductVariant> variantsToUpdate = variantRepository.findAllById(request.getVariantIds());
         if (variantsToUpdate.size() != request.getVariantIds().size()) {
@@ -336,18 +376,25 @@ public class ProductService {
                 .map(ProductVariant::getProduct)
                 .collect(Collectors.toSet());
         for (ProductVariant variant : variantsToUpdate) {
-            if (request.getPurchasePrice() != null) variant.setPurchasePrice(request.getPurchasePrice());
-            if (request.getSalePrice() != null) variant.setSalePrice(request.getSalePrice());
-            if (request.getStatus() != null) variant.setStatus(request.getStatus());
+            if (purchaseOrderDetailRepository.existsByVariantId(variant.getId())) {
+                throw new InvalidException(ErrorCode.CANNOT_UPDATE_VARIANT_HAS_TRANSACTIONS);
+            }
+            if (request.getPurchasePrice() != null)
+                variant.setPurchasePrice(request.getPurchasePrice());
+            if (request.getSalePrice() != null)
+                variant.setSalePrice(request.getSalePrice());
+            if (request.getStatus() != null)
+                variant.setStatus(request.getStatus());
         }
         affectedProducts.forEach(this::syncParentStatus);
         return affectedProducts.stream()
                 .map(productMapper::toResponse)
-                .toList();
+                .collect(Collectors.toList());
     }
 
     private void syncParentStatus(Product product) {
         boolean allVariantsInactive = product.getVariants().stream()
+                .filter(v -> v.getStatus() != Status.DELETED)
                 .allMatch(v -> v.getStatus() == Status.INACTIVE);
         if (allVariantsInactive) {
             product.setStatus(Status.INACTIVE);
@@ -359,7 +406,8 @@ public class ProductService {
     private String generateUniqueProductCode() {
         String newCode;
         do {
-            String datePart = LocalDate.now(ZoneId.of("Asia/Ho_Chi_Minh")).format(DateTimeFormatter.ofPattern("yyMMdd"));
+            String datePart = LocalDate.now(ZoneId.of("Asia/Ho_Chi_Minh"))
+                    .format(DateTimeFormatter.ofPattern("yyMMdd"));
             String randomPart = UUID.randomUUID().toString().substring(0, 4).toUpperCase();
             newCode = "SP-" + datePart + "-" + randomPart;
         } while (productRepository.existsByCode(newCode));
